[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/tiles/menu/menue.png" type="Texture" id=1]
[ext_resource path="res://Assets/fonts/dizzy_font.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/icons/egg.png" type="Texture" id=3]
[ext_resource path="res://Scripts/display.gd" type="Script" id=4]
[ext_resource path="res://Scenes/everplant_touch_assistent.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 7
use_mipmaps = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 7
use_mipmaps = true
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )
Fonts/fonts/large = null
Fonts/fonts/normal = null

[node name="display" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="overlay" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 1.52588e-05
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="coins_label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 177.0
margin_top = 9.0
margin_right = -56.0
margin_bottom = -176.0
rect_min_size = Vector2( 16, 7 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.721569, 0.780392, 0.435294, 1 )
text = "00"
align = 2
uppercase = true
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="room_label" type="Label" parent="."]
modulate = Color( 0.439216, 0.643137, 0.698039, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 48.0
margin_top = 25.0
margin_right = -48.0
margin_bottom = -160.0
theme = SubResource( 3 )
text = "the third day"
align = 1
autowrap = true
uppercase = true
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="egg_list" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 56.0
margin_top = 9.0
margin_right = -177.0
margin_bottom = -175.0
custom_constants/separation = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="egg_1" type="TextureRect" parent="egg_list"]
modulate = Color( 0.721569, 0.780392, 0.435294, 1 )
margin_right = 7.0
margin_bottom = 8.0
rect_min_size = Vector2( 7, 7 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 3
__meta__ = {
"_editor_description_": ""
}

[node name="egg_2" type="TextureRect" parent="egg_list"]
modulate = Color( 0.721569, 0.780392, 0.435294, 1 )
margin_left = 8.0
margin_right = 15.0
margin_bottom = 8.0
rect_min_size = Vector2( 7, 7 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 3
__meta__ = {
"_editor_description_": ""
}

[node name="everplant_touch_integration" parent="." instance=ExtResource( 5 )]

[editable path="everplant_touch_integration"]
